<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/invoice_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:autofillHints="quantity"
        android:hint="@string/quantity_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/unit_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="unitPrice"
            android:hint="@string/unit_price_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unity"
            android:minHeight="48dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <EditText
        android:id="@+id/amount_ht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="amountHt"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/amount_ht_hint"
        android:inputType="text"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tax_rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="taxRate"
            android:hint="@string/tax_rate_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/uniti" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/loyal"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/loyalty_label" />

        <RadioButton
            android:id="@+id/not_loyal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/not_loyalty_label" />
    </RadioGroup>

    <EditText
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:autofillHints="discount"
        android:hint="@string/discount_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/calculate_ttc_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:minHeight="48dp"
        android:text="@string/calculate_ttc_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/reset_button"
        android:textStyle="bold" />


</LinearLayout>