<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/se_connecter"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/login" />

</LinearLayout>